<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="5">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_weight="3"
        android:background="@color/primary"
        android:fontFamily="sans-serif-medium"
        android:gravity="bottom"
        android:paddingBottom="@dimen/reg_heading_bottom_margin"
        android:paddingLeft="@dimen/content_keyline"
        android:paddingRight="@dimen/content_keyline"
        android:text="@string/account_add_title"
        android:textColor="@color/primary_text_light"
        android:textSize="@dimen/font_headline" />

    <co.cutely.asim.view.CheckedEditText
        android:id="@+id/handle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_row_small"
        android:layout_marginBottom="@dimen/smallest_margin"
        android:layout_marginLeft="@dimen/content_keyline"
        android:layout_marginRight="@dimen/content_keyline"
        android:layout_marginTop="@dimen/smallest_margin"
        android:gravity="center_vertical"
        android:hint="@string/account_add_handle"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/font_type_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_row_small"
        android:layout_marginBottom="@dimen/smallest_margin"
        android:layout_marginLeft="@dimen/content_keyline"
        android:layout_marginRight="@dimen/content_keyline"
        android:layout_marginTop="@dimen/smallest_margin">

        <co.cutely.asim.view.CheckedEditText
            android:id="@+id/host"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/account_add_host"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_type_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/smallest_margin"
            android:layout_marginRight="@dimen/smallest_margin"
            android:gravity="center_vertical"
            android:text="@string/account_add_host_port_separator"
            android:textColor="@color/primary_text" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/smallest_margin"
                android:paddingRight="@dimen/smallest_margin"
                android:text="@string/account_add_port_spacing"
                android:visibility="invisible" />

            <co.cutely.asim.view.CheckedEditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/account_add_port"
                android:inputType="number" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|right">

        <com.andexert.library.RippleView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ripple:rv_alpha="180"
            ripple:rv_centered="true"
            ripple:rv_color="@color/primary"
            ripple:rv_rippleDuration="200">

            <ImageView
                android:layout_width="@dimen/common_button_touchable"
                android:layout_height="@dimen/common_button_touchable"
                android:clickable="true"
                android:contentDescription="@string/core_next"
                android:src="@drawable/ic_navigate_next_grey600_36dp" />
        </com.andexert.library.RippleView>
    </LinearLayout>
</LinearLayout>