<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="5">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_weight="3"
        android:background="@color/primary"
        android:fontFamily="sans-serif-medium"
        android:gravity="bottom"
        android:paddingBottom="@dimen/reg_heading_bottom_margin"
        android:paddingLeft="@dimen/content_keyline"
        android:paddingRight="@dimen/content_keyline"
        android:text="@string/account_add_title"
        android:textColor="@color/primary_text_light"
        android:textSize="@dimen/font_headline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:fontFamily="sans-serif-thin"
        android:paddingLeft="@dimen/content_keyline"
        android:paddingRight="@dimen/content_keyline"
        android:text="@string/account_add_hint"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/font_type_4" />

    <co.cutely.asim.view.CheckedEditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_row_small"
        android:layout_marginBottom="@dimen/smallest_margin"
        android:layout_marginLeft="@dimen/content_keyline"
        android:layout_marginRight="@dimen/content_keyline"
        android:gravity="center_vertical"
        android:hint="@string/account_add_login"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/font_type_4" />

    <co.cutely.asim.view.CheckedEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_row_small"
        android:layout_above="@+id/next"
        android:layout_marginBottom="@dimen/content_row_small"
        android:layout_marginLeft="@dimen/content_keyline"
        android:layout_marginRight="@dimen/content_keyline"
        android:layout_marginTop="@dimen/smallest_margin"
        android:gravity="center_vertical"
        android:hint="@string/account_add_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/font_type_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="bottom|right">

        <com.andexert.library.RippleView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ripple:rv_alpha="180"
            ripple:rv_centered="true"
            ripple:rv_color="@color/primary"
            ripple:rv_rippleDuration="200">

            <ImageView
                android:layout_width="@dimen/common_button_touchable"
                android:layout_height="@dimen/common_button_touchable"
                android:clickable="true"
                android:src="@drawable/ic_navigate_next_grey600_36dp" />
        </com.andexert.library.RippleView>
    </LinearLayout>
</LinearLayout>